--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div class="collapse navbar-collapse" id="collapsingNavbar">
 					<ul class="nav navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link js-scroll-trigger" target="_blank" href="https://www.google.com/">Lets be Friends</a>
+							<a class="nav-link js-scroll-trigger" target="_blank" href="newcontact.html">Lets be Friends</a>
 						</li>
 					</ul>
 				</div>
