correction in what i can do section and footer height

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 						<p class = "text-division-sizing p-4">I like to keep it simple. My goals are to focus on content, typography, and conveying the message that you want to send.</p>
 						<hr class="mb-0"></hr>
 						<h3 class = "text-division-color m-5">Develop what you need.</h3>
-						<p class = "text-division-sizing p-4">I'm a developer, so I know how to create your website and integrate graphic's to run across devices using the latest technologies available.</p>
+						<p class = "text-division-sizing">I'm a developer, so I know how to create your website and integrate graphics to run across devices using the latest technologies available.</p>
 					</div>
 				</div>
 			</section>
 		</div>
-		<div class = "breaker text-center justify-content-center">
+		<div class = "breaker text-center justify-content-center p-5">
 			<section id = "help" class = "">
 				<div class = "container col-md-6">
 					<description>
@@ -104,7 +104,7 @@
 			</div>
 		</section>
 		<footer class="small-text bg-blue text-white text-center">
-			<div class="container">© 2019 Potrik Ameer. All rights reserved.</div>
+			<div class="container">©2019 Potrik Ameer. All rights reserved.</div>
 		</footer>
     
     <!-- Optional JavaScript -->
