Header font and color change

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			</section>
 		</div>
 		<div class = "breaker text-center justify-content-center p-5">
-			<section id = "help" class = "">
+			<section id = "help">
 				<div class = "container col-md-6">
 					<description>
 						<h2>I can help!</h2>
@@ -93,7 +93,7 @@
 				</div>
 			</section>
 		</div>
-		<section id="social" class = "mt-5 mb-5">
+		<section id="social" class = "mt-2 mb-5">
 			<div class="social-buttons d-flex justify-content-center mx-0">
 				<a href="https://www.linkedin.com/in/ameer-potrik-b60a88145/" target="_blank" class="mx-2">
 					<i class="fab fa-linkedin"></i>
