hamburger menu aligned

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!-- Custom CSS -->
 		<link rel="stylesheet" href="css/main-styles.css">
 	
-		<title>Portfolio</title>
+		<title>Web Developer</title>
 	</head>
 	<body>
 		<nav id="page-top" cz-shortcut-listen="true">
