typeform question set fix and home button active

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			  </ul>
 			</nav>
 			<div>
-				<a class="navbar-brand ml-auto pt-3" href="#page-top">Home </a>
+				<a class="navbar-brand mt-auto ml-auto" href="#page-top">Home </a>
 			</div>
 			</nav>
 		</nav>
@@ -55,7 +55,7 @@
 					<div class = "col-md-6 p-5">
 						<article>
 						<h3>HI.</h3>
-						<p>I'm a web <strong>designer / developer</strong> based in Mumbai, India. I have a passion for web design and love to create for web and mobile devices.</p>
+						<p>I'm a web designer / developer based in Mumbai, India. I have a passion for web design and love to create for web and mobile devices.</p>
 						</article>
 					</div>
 				</div>
