--- a/newcontact.html
+++ b/newcontact.html
@@ -14,7 +14,7 @@
 	<!-- Custom CSS -->
 		<link rel="stylesheet" href="css/main-styles.css">
 	
-		<title>Portfolio</title>
+		<title>Let's Connect</title>
 	</head>
 	<body>
 		<nav id="page-top" cz-shortcut-listen="true">
@@ -24,11 +24,11 @@
 					<span> </span>
 					<span> </span>
 				</button>
-				<a class="navbar-brand mr-auto" href="#page-top">Home </a>
+				<a class="navbar-brand mr-auto" target="_blank" href="index.html">Home </a>
 				<div class="collapse navbar-collapse" id="collapsingNavbar">
 					<ul class="nav navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link js-scroll-trigger" target="_blank" href="https://www.google.com/">Lets be Friends</a>
+							<a class="nav-link js-scroll-trigger" target="_blank">Lets be Friends</a>
 						</li>
 					</ul>
 				</div>
