add meta tags for description keywords and robot

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="google-site-verification" content="wVJvDEPg5BI80thmbVO_vjQGhugEwPF1uXnOPLDyTCI" />
+		<meta name="description" content="The portfolio of Potrik Ameer, an Indian Web Designer and a web developer based in Maharashtra, Mumbai. A person who is always focussed on content, typography and love to integrate graphics to run across devices using latest technologies available">
+		<meta name="keywords" content="potrik, ameer, potrik ameer, web design, graphic design, websites, graphics, illustration, freelance, developer">
+		<meta name="robots" content="index, follow">
 
     <!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -16,7 +19,7 @@
 	<!-- Custom CSS -->
 		<link rel="stylesheet" href="css/main-styles.css">
 	
-		<title>Web Developer</title>
+		<title>Potrik Ameer - a Web Designer & Developer - About</title>
 	</head>
 	<body>
 		<nav id="page-top" cz-shortcut-listen="true">
