add sitemap and robots text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			</button>
 			<nav id="ham-navigation" class="ham-menu">
 			  <ul class="menu">
-				<li><a class="nav-link js-scroll-trigger" target="_blank" href="newcontact.html">Lets be Friends</a></li>
+				<li><a class="nav-link js-scroll-trigger" target="_blank" href="contact.html">Lets be Friends</a></li>
 			  </ul>
 			</nav>
 			<div>
