seo site checkup google analytics and favicon

--- a/index.html
+++ b/index.html
@@ -13,13 +13,25 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	
 	<!-- Fontawsesome  -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-	
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+		
+		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 	
 	<!-- Custom CSS -->
 		<link rel="stylesheet" href="css/main-styles.css">
 	
 		<title>Potrik Ameer - a Web Designer & Developer - About</title>
+		
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135916816-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){
+				dataLayer.push(arguments);}
+				gtag('js', new Date());
+			gtag('config', 'UA-135916816-1');
+		</script>
+		
 	</head>
 	<body>
 		<nav id="page-top" cz-shortcut-listen="true">
