--- a/contact.html
+++ b/contact.html
@@ -5,18 +5,33 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="google-site-verification" content="wVJvDEPg5BI80thmbVO_vjQGhugEwPF1uXnOPLDyTCI" />
-
+		<meta name="description" content="The portfolio of Potrik Ameer, an Indian Web Designer and a web developer based in Maharashtra, Mumbai. A person who is always focussed on content, typography and love to integrate graphics to run across devices using latest technologies available">
+		<meta name="keywords" content="potrik, ameer, potrik ameer, web design, graphic design, websites, graphics, illustration, freelance, developer">
+		<meta name="robots" content="index, follow">
 
     <!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	
 	<!-- Fontawsesome  -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+		
+		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 	
 	<!-- Custom CSS -->
 		<link rel="stylesheet" href="css/main-styles.css">
 	
 		<title>Let's Connect</title>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135916816-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){
+				dataLayer.push(arguments);}
+				gtag('js', new Date());
+			gtag('config', 'UA-135916816-1');
+		</script>
+
 	</head>
 	<body>
 		<nav id="page-top" cz-shortcut-listen="true">
