--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 	<!-- Fontawsesome  -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 		
-		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 	
 	<!-- Custom CSS -->
 		<link rel="stylesheet" href="css/main-styles.css">
